# Koko

./: .gitignore  .gitmodules  .readthedocs.yaml  .rustfmt.toml  .sonarcloud.properties  AGENTS.md  Cargo.toml  PROPOSAL.md  build.rs  codecov.yml  deny.toml  pyproject.toml  sonar-project.properties
.cargo/: config.toml
.github/workflows/: _codeql.yml  ci-client-web-svelte.yml  ci-clippy.yml  ci-coverage.yml  ci-flatpak.yml  ci-macos-dmg.yml  ci-release.yml  ci-rust.yml  ci-windows-installer.yml  ci.yml
crates/client-desktop/: Cargo.toml
crates/client-desktop/src/: connection.rs  main.rs
crates/client-web/: .env.mock  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/client-web-svelte/: .env.mock  .gitignore  .oxlintrc.json  BROWSE_FILTER_PROPOSAL.md  PHASE7_VERIFICATION.md  PLAYER_SPIKE_REFERENCE.md  PORTING_GUIDELINES.md  POSTMORTEM.md  PROJECT_OVERVIEW.md  README.md  REVIEW_RESPONSE.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
crates/client-web-svelte/.storybook/: main.ts  (+3 more)
crates/server/: BACKEND_ISSUES.md  Cargo.toml
crates/server/sql/migrations/0000002_create_media_catalog/: down.sql  up.sql
crates/server/sql/migrations/0000003_enhance_media_catalog/: down.sql  up.sql
crates/server/sql/migrations/0000004_create_item_metadata_links/: down.sql  up.sql
crates/server/sql/migrations/0000005_extend_metadata_and_playback/: down.sql  up.sql
crates/server/sql/migrations/0000006_add_media_source_roots/: down.sql  up.sql
crates/server/sql/migrations/0000007_store_library_settings_in_db/: down.sql  up.sql
crates/server/sql/migrations/0000008_normalize_legacy_metadata_provider_ids/: down.sql  up.sql
crates/server/sql/migrations/0000009_track_metadata_match_attempts/: down.sql  up.sql
crates/server/sql/migrations/0000010_scope_playback_progress_to_user/: down.sql  up.sql
crates/server/sql/migrations/0000011_logical_media_items_and_metadata_hierarchy/: down.sql  up.sql
crates/server/sql/migrations/0000012_add_user_profile_fields/: down.sql  up.sql
crates/server/sql/migrations/0000013_allow_duplicate_library_paths/: down.sql  up.sql
crates/server/sql/migrations/0000014_metadata_locales/: down.sql  up.sql
crates/server/sql/migrations/0000015_fix_metadata_locale_unique/: down.sql  up.sql
crates/server/sql/migrations/0000016_denormalize_metadata_presentation/: down.sql  up.sql
crates/server/sql/migrations/0000017_scope_show_identity_keys_by_library/: down.sql  up.sql
crates/server/sql/migrations/0000018_normalize_metadata_people/: down.sql  up.sql
crates/server/sql/migrations/0000019_normalize_metadata_external_ids/: down.sql  up.sql
crates/server/sql/migrations/0000020_remove_provider_payload_json/: down.sql  up.sql
crates/server/sql/migrations/0000021_library_access_and_languages/: down.sql  up.sql
crates/server/sql/migrations/0000022_store_metadata_theme_urls/: down.sql  up.sql
crates/server/sql/migrations/0000023_normalize_metadata_collections/: down.sql  up.sql
crates/server/sql/migrations/0000024_normalize_youtube_trailer_urls/: down.sql  up.sql
crates/server/sql/migrations/0000025_store_runtime_settings_in_db/: up.sql
crates/server/sql/migrations/0000026_missing_media_trash/: down.sql  up.sql
crates/server/sql/migrations/0000027_normalize_media_file_libraries/: down.sql  up.sql
crates/server/sql/migrations/0000028_external_media_extras/: down.sql  up.sql
crates/server/sql/migrations/0000029_scanner_file_hash/: down.sql  up.sql
crates/server/sql/migrations/0000030_remove_media_file_fingerprint_seed/: down.sql  up.sql
crates/server/sql/migrations/0000031_track_watch_counts/: down.sql  up.sql
crates/server/sql/migrations/0000032_normalize_metadata_person_external_ids/: down.sql  up.sql
crates/server/sql/migrations/0000033_remove_metadata_people_identity_key/: down.sql  up.sql
crates/server/sql/migrations/a54d52c8da5e_initial_schema/: down.sql  up.sql
crates/server/src/: auth.rs  certs.rs  config.rs  ffmpeg_resolve.rs  globals.rs  lib.rs  main.rs  media.rs  metadata.rs  remote_desktop_config.rs  scheduled_tasks.rs  secrets.rs  signal_handler.rs  transcode.rs  tray.rs  utils.rs
crates/server/src/capture/: mod.rs  monitor.rs  x11_capture.rs
crates/server/src/clipboard/: mod.rs
crates/server/src/db/: mod.rs  models.rs  schema.rs
crates/server/src/dependencies/: mod.rs
crates/server/src/input/: mod.rs  x11_input.rs
crates/server/src/logging/: mod.rs
crates/server/src/metadata/: mod.rs
crates/server/src/metadata/providers/: mod.rs  themerr.rs  tmdb.rs  trailerdb.rs  tvdb.rs
crates/server/src/scanner/: books.rs  directory.rs  mod.rs  movies.rs  music.rs  photos.rs  shows.rs
crates/server/src/scheduled_tasks/: database_maintenance.rs  metadata_refresh.rs  mod.rs  trash_cleanup.rs
crates/server/src/streaming/: mod.rs
crates/server/src/web/: mod.rs
crates/server/src/web/routes/: auth.rs  common.rs  dependencies.rs  media.rs  mod.rs  settings.rs  streaming.rs  user.rs
crates/server/tests/: main.rs  test_auth.rs  test_media.rs  test_metadata.rs  test_shutdown_coordinator.rs  test_shutdown_integration.rs  test_signal_handler.rs  test_tray.rs  test_utils.rs
crates/server/tests/fixtures/: mod.rs
crates/server/tests/test_dependencies/: mod.rs
crates/server/tests/test_web/: mod.rs  test_auth_routes.rs
crates/server/tests/test_web/routes/: auth.rs  common.rs  dependencies.rs  media.rs  mod.rs  settings.rs  tools.rs  user.rs
crates/server/wix/: main.wxs
docs/: BUILD_FIXES.md  IMPLEMENTATION.md  METADATA_PROVIDER_TEMPLATE.md  MOVIE_NAMING.md  PLATFORM_SUPPORT.md  QUICKSTART.md  README.md  REMOTE_DESKTOP.md  ROADMAP.md  SHOW_NAMING.md  TESTING.md  known-issues.md  koko@.service
docs/refactoring/: routes-module-split-plan.md
packaging/macos/: package-dmg.sh
scripts/: build.sh
src/: auth.rs  certs.rs  config.rs  db.rs  globals.rs  lib.rs  tray.rs
src/logging/: mod.rs
src/web/: mod.rs
tests/dependencies/: mod.rs
tests/fixtures/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+210 files in other folders)
