[workspace]
members = [
    "crates/server",
    # "crates/common",
    # "crates/clients-*",
]
resolver = "2"

# Workspace-wide metadata
[workspace.package]
authors = ["LizardByte"]
edition = "2021"
readme = "docs/README.md"
documentation = "https://github.com/LizardByte/Koko/blob/master/README.md"
homepage = "https://app.lizardbyte.dev"
repository = "https://github.com/LizardByte/Koko.git"
license = ""
version = "0.0.0"
categories = [
    "multimedia",
    "multimedia::audio",
    "multimedia::images",
    "multimedia::video",
]
keywords = [
    "koko",
    "media-server",
    "self-hosted",
]
publish = false  # disable publishing to crates.io

# workspace-level dependencies to ensure consistent versions
[workspace.dependencies]
# ensure deps are compatible: https://www.gnu.org/licenses/license-list.en.html#GPLCompatibleLicenses
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
rstest = "0.25.0"
serial_test = "3.2.0"
tokio = "1.43.0"
