[workspace]
members = [
    "crates/server",
    "xtask",
    # "crates/common",
    # "crates/clients-*",
]
resolver = "2"

# Workspace-wide metadata
[workspace.package]
authors = ["LizardByte"]
edition = "2021"
readme = "docs/README.md"
documentation = "https://github.com/LizardByte/Koko/blob/master/README.md"
homepage = "https://app.lizardbyte.dev"
repository = "https://github.com/LizardByte/Koko.git"
license = ""
version = "0.0.0"
categories = [
    "multimedia",
    "multimedia::audio",
    "multimedia::images",
    "multimedia::video",
]
keywords = [
    "koko",
    "media-server",
    "self-hosted",
]
publish = false  # disable publishing to crates.io

# workspace-level dependencies to ensure consistent versions
[workspace.dependencies]
# ensure deps are compatible: https://www.gnu.org/licenses/license-list.en.html#GPLCompatibleLicenses
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
rstest = "0.26.0"

[workspace.metadata.ci]
cargo-run-bin = "1.7.4"

[workspace.metadata.bin]
cargo-deny = { version = "0.19.9", locked = true }
cargo-edit = { version = "0.13.1", bins = ["cargo-set-version"], locked = true }
cargo-tarpaulin = { version = "0.35.4", locked = true }
cargo-wix = { version = "0.3.9", git = "https://github.com/volks73/cargo-wix.git", rev = "fde983c2e901970267e76b8fd68120fdd5457a57", locked = true }
