[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Koko"
version = "0.0.0"
description = "Python tooling for Koko"
requires-python = ">=3.14"
license = {text = "LicenseRef-LizardByte-Source-Available"}
authors = [
    {name = "LizardByte", email = "lizardbyte@users.noreply.github.com"}
]

dependencies = []

[dependency-groups]
flatpak = [
    "aiohttp==3.14.3",
    "flatpak_node_generator==0.1.0",
    "pyyaml==6.0.3",
    "tomlkit==0.15.1",
]

[project.urls]
Homepage = "https://app.lizardbyte.dev"
Repository = "https://github.com/LizardByte/Koko"
Issues = "https://github.com/LizardByte/Koko/issues"

[tool.setuptools]
py-modules = []

[tool.uv.sources]
flatpak_node_generator = { path = "packaging/linux/flatpak/deps/flatpak-builder-tools/node" }
