[package]
name = "koko"
description = "Self-hosted media server."
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true
build = "../../build.rs"

categories = [
    "multimedia",
    "multimedia::audio",
    "multimedia::images",
    "multimedia::video",
]
keywords = [
    "koko",
    "media-server",
    "self-hosted",
]

include = [
    "/assets",
    "/crates/server/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[lib]
name = "koko"
path = "src/lib.rs"

[[bin]]
name = "koko"
path = "src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

[dependencies]
# ensure deps are compatible: https://www.gnu.org/licenses/license-list.en.html#GPLCompatibleLicenses
base64 = "0.22.1"
bcrypt = "0.17.0"
cargo_metadata = "0.23.0"
chrono = "0.4.39"
config = "0.15.7"
diesel = { version = "2.2.7", features = ["sqlite"] }
diesel_migrations = "2.2.0"
dirs = "6.0.0"
fern = { version = "0.7.1", features = ["colored"] }
image = "0.25.5"
jsonwebtoken = "10.1.0"
libsqlite3-sys = { version = "0.35", features = ["bundled"] }  # this is needed for proper linking
log = "0.4.25"
once_cell = "1.20.3"
rand = "0.9.0"
rcgen = "0.13.2"
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["tls"] }
rocket_okapi = { version = "0.9.0", features = ["swagger", "rapidoc"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
schemars = "0.8.1"
serde = "1.0.217"
serde_json = "1.0.138"
tao = "0.31.1"
tokio = { version = "1.0", features = ["full"] }
tray-icon = "0.21.1"
webbrowser = "1.0.3"
# common = { path = "../common" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3.0"

[dev-dependencies]
async-std.workspace = true
rstest.workspace = true

[package.metadata.ci]
cargo-run-bin = "1.7.4"

[package.metadata.bin]
cargo-edit = { version = "0.13.1" }
cargo-tarpaulin = { version = "0.31.5" }
