[package]
name = "koko"
description = "Self-hosted media server."
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
publish.workspace = true
build = "../../build.rs"

categories = [
    "multimedia",
    "multimedia::audio",
    "multimedia::images",
    "multimedia::video",
]
keywords = [
    "koko",
    "media-server",
    "self-hosted",
]

include = [
    "/assets",
    "/crates/server/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[lib]
name = "koko"
path = "src/lib.rs"

[[bin]]
name = "koko"
path = "src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

[features]
default = [
    "native-secret-store",
    "tray",
]
native-secret-store = ["dep:keyring"]
tray = [
    "dep:objc2-core-foundation",
    "dep:tao",
    "dep:tray-icon",
    "dep:webbrowser",
]

[dependencies]
# ensure deps are compatible: https://www.gnu.org/licenses/license-list.en.html#GPLCompatibleLicenses
base64 = "=0.22.1"
bcrypt = "=0.19.2"
cargo_metadata = "=0.23.1"
chrono = "=0.4.45"
config = "=0.15.25"
diesel = { version = "=2.3.11", features = ["sqlite"] }
diesel_migrations = "=2.3.2"
dirs = "=6.0.0"
fern = { version = "=0.7.1", features = ["colored"] }
image = "=0.25.10"
imohash = "=0.1.2"
jsonwebtoken = { version = "=10.4.0", features = ["rust_crypto"] }
keyring = { version = "=4.1.3", features = ["cli"], optional = true }
keyring-core = { version = "=1.0.0", features = ["sample"] }
libsqlite3-sys = { version = "=0.37.0", features = ["bundled"] }  # this is needed for proper linking
log = "=0.4.33"
once_cell = "=1.21.4"
rand = "=0.10.2"
rcgen = "=0.14.8"
regex = "=1.12.4"
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "query", "rustls"] }
rocket = { version = "=0.5.1", features = ["tls"] }
rocket_okapi = { version = "=0.9.0", features = ["swagger", "rapidoc"] }
rocket_sync_db_pools = { version = "=0.1.0", features = ["diesel_sqlite_pool"] }
schemars = "=0.8.22"
serde = "=1.0.228"
serde_json = "=1.0.150"
serde_yaml = "=0.9.34"
sha2 = "=0.11.0"
strsim = "=0.11.1"
tao = { version = "=0.35.3", optional = true }
tokio = { version = "=1.52.3", features = ["full"] }
tmdb_client = "=1.8.0"
tray-icon = { version = "=0.24.1", optional = true }
tvdb4 = "=0.1.0"
webbrowser = { version = "=1.2.1", optional = true }
# common = { path = "../common" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = { version = "=0.3.2", optional = true }

[dev-dependencies]
async-std.workspace = true
rstest.workspace = true
